[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aibox-nlp"
authors = [{name = "AiBox Lab"}]
maintainers = [{name = "Moésio Filho", email = "moesio.f@gmail.com"}]
version = "0.0.1"
description = "AiBox Data Lake Toolkit."
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Development Status :: 3 - Alpha"]
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "smart-open[gcs,s3]>=7.3.1",
    "uv>=0.8.15",
]

[project.urls]
Homepage = "https://aiboxlab.org/data-lake"
Documentation = "https://aiboxlab.org/data-lake"
Repository = "https://github.com/aiboxlab/data-lake"
Issues = "https://github.com/aiboxlab/data-lake/issues"
Changelog = "https://github.com/aiboxlab/data-lake/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aibox*"]
namespaces = true
